Mon Oct  7 14:55:11 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Added note that paths in environment variables shouldn't use
          double quotes

Mon Oct  7 13:50:49 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Corrected flag for x86_64

Mon Oct  7 10:18:42 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Use perl explicitly when using mwc.pl on Windows

Mon Oct  7 10:16:28 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Corrected windows slashes

Mon Oct  7 08:15:16 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Document how with nmake we can generate Win64 projects

Fri Oct  4 10:51:06 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Extended instructions

Fri Oct  4 07:22:25 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Added nmake steps

Thu Oct  3 19:33:20 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Added instructions how to compile DDS4CCM with RTI DDS
          with Visual Studio on Windows

Thu Oct  3 09:36:45 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Prepared for next release

Thu Oct 03 09:47:23 CEST 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.2.2 released.

Mon Sep  2 15:39:58 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/Latency_Sender.cpp:
        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/NDDS_Latency_Sender.cpp:
